--- a/src/app/components/car-detail/car-detail.component.html
+++ b/src/app/components/car-detail/car-detail.component.html
@@ -1,1 +1,78 @@
-<p>car-detail works!</p>
+<div *ngIf="dataLoaded == false" class="d-flex justify-content-center">
+  <div class="spinner-border text-success" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
+<div *ngIf="dataLoaded == true" class="mx-auto">
+  <div class="card-header text-center">
+    <strong> {{ car.brandName }} - {{ car.modelYear }} </strong>
+  </div>
+  <div
+    id="carImageSlide"
+    class="carousel slide carousel-fade"
+    data-bs-ride="carousel"
+  >
+    <div
+      class="carousel-inner d-flex"
+      style="height: 70vh; width: 80vh; margin-left: 18vh"
+    >
+      <div
+        *ngFor="let carImage of carImages; index as i; first as firstImage"
+        class="carousel-item align-self-center"
+        [ngClass]="{ active: firstImage }"
+        style="height: 100%; width: 100%"
+      >
+        <img
+          src="{{ apiUrl }}{{ carImage.imagePath }}"
+          class=""
+          style="height: 100%; width: 100%"
+        />
+      </div>
+
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carImageSlide"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carImageSlide"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <table class="table table-striped mt-2">
+      <tbody>
+        <tr>
+          <th scope="row">Marka</th>
+          <td>{{ car.brandName }}</td>
+        </tr>
+        <tr>
+          <th scope="row">Model Yılı</th>
+          <td>{{ car.modelYear }}</td>
+        </tr>
+        <tr>
+          <th scope="row">Renk</th>
+          <td>{{ car.colorName }}</td>
+        </tr>
+        <tr>
+          <th scope="row">Fiyat</th>
+          <td>
+            {{
+              car.dailyPrice | currency: "TRY":"symbol-narrow":"1.2-2"
+            }}/Gunluk
+          </td>
+        </tr>
+       
+      </tbody>
+    </table>
+  </div>
+</div>
