--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -11,7 +11,9 @@
     <th>Model</th>
   </tr>
 </thead>
-<tr *ngFor="let car of cars">
+<tr (click) = setCurrentCar(car)
+routerLink = "/cars/cardetail/{{car.carId}}"
+ *ngFor="let car of cars">
   <td>{{ car.brandName }}</td>
   <td>{{ car.colorName }}</td>
   <td>{{ car.modelYear }}</td>
