--- a/src/app/components/car-detail/car-detail.component.html
+++ b/src/app/components/car-detail/car-detail.component.html
@@ -23,7 +23,7 @@
         style="height: 100%; width: 100%"
       >
         <img
-          src="{{ apiUrl }}{{ carImage.imagePath }}"
+          src="{{ apiUrl }}/Images/{{ carImage.imagePath }}"
           class=""
           style="height: 100%; width: 100%"
         />
