--- a/src/app/components/car-detail/car-detail.component.html
+++ b/src/app/components/car-detail/car-detail.component.html
@@ -71,6 +71,14 @@
             }}/Gunluk
           </td>
         </tr>
+        <tr>
+          <th scope="row"></th>
+          <td>
+            <button (click) = "rentCar(car)" type = "button" class = "btn btn-success">
+                Kirala
+            </button>
+          </td>
+        </tr>
        
       </tbody>
     </table>
