--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,10 +1,20 @@
+<div class="mb-3">
+  <label for="filterText" class="form-label">Renk Ara</label>
+  <input type="text" [(ngModel)] = "filterText" class="form-control" 
+  id="filterText" placeholder="arama ifadesi giriniz">
+</div>
+
+<div *ngIf="filterText" class="alert alert-warning">
+  {{filterText}} aradınız.
+</div>
+
 <ul class="list-group">
     <th class="list-group-item">Renkler</th>
     <li [class]="getAllColorClass()" routerLink = "/cars">Tüm Ürünler</li>
     <li (click) = setCurrentColor(color)
     routerLink = "/cars/color/{{color.colorId}}"
     [class]="getCurrentColorClass(color)"
-     *ngFor="let color of colors">
+     *ngFor="let color of colors | filterColorPipe:filterText">
       {{ color.colorName }}
     </li>
-  </ul>
+</ul>
